--- a/Tribute.html
+++ b/Tribute.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>       
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>      
+
+	<style>
+		.thumbnail img {
+			width: 100%; 
+			height: 250px;
+		}
+	</style>
+	
   </head>
 
   <body>
@@ -15,7 +23,98 @@
       <div class="jumbotron text-center">
         <h1>Ron Mueck</h1>
         <p><i>Hyperrealistic sculptures</i></p>
+        <!-- Add picture of the scultor here -->
       </div>
+      <div class= "row">
+        <div class="col-md-3">        
+			<div class="thumbnail">
+				<a href="Larger%20images/baby_girl_large.jpg">
+					<img src="baby_girl.jpg" alt="Baby girl">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/old_ladies_large.jpg">
+					<img src="old_ladies.jpg" alt="Old ladies">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/boy_large.jpg">			
+					<img src="boy.jpg" alt="Boy">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/youth_large.jpg">
+					<img src="youth.jpg" alt="Black youth with cut">
+				</a>
+			</div>
+        </div>        
+      </div>
+	  <div class="row">
+        <div class="col-md-3">        
+			<div class="thumbnail">
+				<a href="Larger%20images/pierced_large.jpg">
+					<img src="pierced.jpg" alt="Pierced man">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/in_bed_large.jpg">			
+					<img src="in_bed.jpg" alt="In bed">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/head_of_a_baby_large.jpg">
+					<img src="head_of_a_baby.jpg" alt="Head of a baby">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/mask_1_large.jpg">
+					<img src="mask_1.jpg" alt="Mask I">
+				</a>
+			</div>
+        </div>	  
+	  </div>
+	  <div class="row">
+        <div class="col-md-3">        
+			<div class="thumbnail">
+				<a href="Larger%20images/mask_2_large.jpg">
+					<img src="mask_2.jpg" alt="Mask 2">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/mask_3_large.jpg">			
+					<img src="mask_3.jpg" alt="Mask 3">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/standing_woman_large.jpg">
+					<img src="standing_woman.jpg" alt="Standing woman">
+				</a>
+			</div>
+        </div>
+        <div class="col-md-3">
+			<div class="thumbnail">
+				<a href="Larger%20images/wild_man_large.jpg">			
+					<img src="wild_man.jpg" alt="Wild man">
+				</a>
+			</div>
+        </div>	  
+	  </div>
     </div>
     
   </body>
