--- a/Tribute.html
+++ b/Tribute.html
@@ -28,28 +28,28 @@
       <div class= "row">
         <div class="col-md-3">        
 			<div class="thumbnail">
-				<a href="Larger%20images/baby_girl_large.jpg">
+				<a href="baby_girl.jpg">
 					<img src="baby_girl.jpg" alt="Baby girl">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/old_ladies_large.jpg">
+				<a href="old_ladies.jpg">
 					<img src="old_ladies.jpg" alt="Old ladies">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/boy_large.jpg">			
+				<a href="boy.jpg">			
 					<img src="boy.jpg" alt="Boy">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/youth_large.jpg">
+				<a href="youth.jpg">
 					<img src="youth.jpg" alt="Black youth with cut">
 				</a>
 			</div>
@@ -58,28 +58,28 @@
 	  <div class="row">
         <div class="col-md-3">        
 			<div class="thumbnail">
-				<a href="Larger%20images/pierced_large.jpg">
+				<a href="pierced.jpg">
 					<img src="pierced.jpg" alt="Pierced man">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/in_bed_large.jpg">			
+				<a href="in_bed.jpg">			
 					<img src="in_bed.jpg" alt="In bed">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/head_of_a_baby_large.jpg">
+				<a href="head_of_a_baby.jpg">
 					<img src="head_of_a_baby.jpg" alt="Head of a baby">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/mask_1_large.jpg">
+				<a href="mask_1.jpg">
 					<img src="mask_1.jpg" alt="Mask I">
 				</a>
 			</div>
@@ -88,28 +88,28 @@
 	  <div class="row">
         <div class="col-md-3">        
 			<div class="thumbnail">
-				<a href="Larger%20images/mask_2_large.jpg">
+				<a href="mask_2.jpg">
 					<img src="mask_2.jpg" alt="Mask 2">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/mask_3_large.jpg">			
+				<a href="mask_3.jpg">			
 					<img src="mask_3.jpg" alt="Mask 3">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/standing_woman_large.jpg">
+				<a href="standing_woman.jpg">
 					<img src="standing_woman.jpg" alt="Standing woman">
 				</a>
 			</div>
         </div>
         <div class="col-md-3">
 			<div class="thumbnail">
-				<a href="Larger%20images/wild_man_large.jpg">			
+				<a href="wild_man.jpg">			
 					<img src="wild_man.jpg" alt="Wild man">
 				</a>
 			</div>
